@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-20T08:31:12Z",
+  "timestamp" : "2022-07-20T16:34:57Z",
   "count_outdated" : 248,
   "uniques_outdated" : 121,
-  "count" : 274,
-  "uniques" : 137,
+  "count" : 276,
+  "uniques" : 138,
   "clones" : [
     {
       "timestamp": "2022-07-06T00:00:00Z",
@@ -84,10 +84,10 @@
     },
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
