@@ -1,6 +1,6 @@
 {
-  "count": 26,
-  "uniques": 5,
+  "count": 28,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-07-06T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
