@@ -1,3 +1,10 @@
+2022-07-20T16:34:57Z:
+* notice: last 14d: unq all: 6 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 121 248 / 137 274
+* notice: next accum: outdated-unq outdated-all / unq all: 121 248 / 138 276
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-07-20]
+
 2022-07-20T08:31:12Z:
 * notice: last 14d: unq all: 5 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 121 248 / 136 274
